Refactored for docker